// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/audioItems/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "audioURL": "https://coscrad.org/wp-content/uploads/2023/05/metal-mondays-mock1_533847__tosha73__distortion-guitar-power-chord-e.wav",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
  "lengthMilliseconds": 20000,
  "mimeType": "audio/x-wav",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "The Wooden Boy",
      },
    ],
  },
  "tags": [],
  "text": "[12000] [JHC] There once was a little wooden boy. {en} (role: original) [15550]
[18300] [JHC] His name was Pinocchio {en} (role: original) [19240]",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/bibliographicReferences/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "data": {
    "abstract": "This is the abstract, NOT a general note!",
    "creators": [
      {
        "name": "Alana Duvernay",
        "type": "author",
      },
      {
        "name": "James Smith",
        "type": "author",
      },
    ],
    "isbn": "978-1-895811-34-6",
    "numberOfPages": 455,
    "place": "Kennebunk Port, Maine",
    "publisher": "Atlantic Publishing",
    "title": "A Day in the Life",
    "type": "book",
    "url": "https://coscrad.org/wp-content/uploads/2023/05/mock-book-bibliographic-reference-1_a-day-in-the-life.pdf",
    "year": 1999,
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "A Day in the Life",
      },
    ],
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "label": "animals",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "bibliographicReference",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
          "type": "video",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "animals",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/books/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "author": "John Doeburg",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "Three Little Pigs",
      },
    ],
  },
  "pages": [
    {
      "identifier": "1",
      "text": "foo",
      "translation": "dee foo",
    },
    {
      "identifier": "2",
      "text": "blah blah blah",
      "translation": "blahas",
    },
  ],
  "publicationDate": "2002",
  "subtitle": "The wolf's revenge",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "plants",
          },
        ],
      },
    },
  ],
  "title": "Three Little Pigs",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/mediaItems/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 2500,
  "mimeType": "audio/x-wav",
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "episode (media item 1) title (in language)",
      },
      {
        "languageCode": "en",
        "role": "free translation",
        "text": "Metal Mondays episode 1",
      },
    ],
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
      "label": "legends",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "mediaItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "song",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "legends",
          },
        ],
      },
    },
  ],
  "url": "https://coscrad.org/wp-content/uploads/2023/05/metal-mondays-mock1_533847__tosha73__distortion-guitar-power-chord-e.wav",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/photographs/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
  "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/Adiitsii-Running.png",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "https://coscrad.org/wp-content/uploads/2023/05/Adiitsii-Running.png",
      },
    ],
  },
  "photographer": "Susie McRealart",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "label": "placenames",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
          "type": "photograph",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
          "type": "audioItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "placenames",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/playlists/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "episodes": [
    {
      "mediaItemUrl": "https://coscrad.org/wp-content/uploads/2023/05/metal-mondays-mock1_533847__tosha73__distortion-guitar-power-chord-e.wav",
      "mimeType": "audio/x-wav",
      "name": "The Wooden Boy {en} (role: original)",
    },
    {
      "mediaItemUrl": "https://coscrad.org/wp-content/uploads/2023/05/metal-mondays-mock2_370934__karolist__guitar-solo.mp3",
      "mimeType": "audio/mpeg",
      "name": "Down at the River {clc} (role: original)",
    },
  ],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "Blake's jams",
      },
    ],
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
      "label": "law",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "bibliographicReference",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
          "type": "playlist",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "law",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/songs/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "audioURL": "https://coscrad.org/wp-content/uploads/2023/05/mock-song-1_mary-had-a-little-lamb.wav",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 3500,
  "lyrics": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "Mary had a little lamb, little lamb.",
      },
    ],
  },
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "Song title in language",
      },
      {
        "languageCode": "en",
        "role": "free translation",
        "text": "Mary had a little lamb (English)",
      },
    ],
  },
  "startMilliseconds": 0,
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
      "label": "legends",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "mediaItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "song",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "legends",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/spatialFeatures/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "geometry": {
    "coordinates": [
      54.034404852745006,
      -132.17563335558532,
    ],
    "type": "Point",
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "Name of Point with ID: 100",
      },
    ],
  },
  "properties": {
    "description": "Description for point 100",
    "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/evergreen-2025158_1280.png",
    "name": "Name of Point with ID: 100",
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "plants",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/terms/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "contributor": "",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "Chil-term-1",
      },
      {
        "languageCode": "en",
        "role": "free translation",
        "text": "Engl-term-1",
      },
    ],
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "plants",
          },
        ],
      },
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/videos/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
  "lengthMilliseconds": 20000,
  "mimeType": "video/mp4",
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "The Demonstration",
      },
    ],
  },
  "tags": [],
  "text": "[12000] [DM] This is how. {en} (role: original) [15550]
[18300] [DM] It is done {en} (role: original) [19240]",
  "videoUrl": "https://coscrad.org/wp-content/uploads/2023/05/Rexy-and-The-Egg-_3D-Dinosaur-Animation_-_-3D-Animation-_-Maya-3D.mp4",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/vocabularyLists/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "entries": [
    {
      "term": {
        "audioURL": "https://coscrad.org/wp-content/uploads/2023/06/511.mp3",
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
        "name": {
          "items": [
            {
              "languageCode": "clc",
              "role": "original",
              "text": "I am singing (lang)",
            },
            {
              "languageCode": "en",
              "role": "free translation",
              "text": "I am singing (Engl)",
            },
          ],
        },
      },
      "variableValues": {
        "person": "11",
        "positive": true,
      },
    },
    {
      "term": {
        "audioURL": "https://coscrad.org/wp-content/uploads/2023/06/512.mp3",
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
        "name": {
          "items": [
            {
              "languageCode": "clc",
              "role": "original",
              "text": "You are singing (lang)",
            },
            {
              "languageCode": "en",
              "role": "free translation",
              "text": "You are singing (Engl)",
            },
          ],
        },
      },
      "variableValues": {
        "person": "12",
        "positive": false,
      },
    },
    {
      "term": {
        "audioURL": "https://coscrad.org/wp-content/uploads/2023/06/513.mp3",
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
        "name": {
          "items": [
            {
              "languageCode": "clc",
              "role": "original",
              "text": "She is singing (lang)",
            },
            {
              "languageCode": "en",
              "role": "free translation",
              "text": "She is singing (Engl)",
            },
          ],
        },
      },
      "variableValues": {
        "person": "13",
        "positive": false,
      },
    },
    {
      "term": {
        "audioURL": "https://coscrad.org/wp-content/uploads/2023/06/501.mp3",
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
        "name": {
          "items": [
            {
              "languageCode": "clc",
              "role": "original",
              "text": "I am not singing (lang)",
            },
            {
              "languageCode": "en",
              "role": "free translation",
              "text": "I am not singing (Engl)",
            },
          ],
        },
      },
      "variableValues": {
        "person": "01",
        "positive": true,
      },
    },
    {
      "term": {
        "audioURL": "https://coscrad.org/wp-content/uploads/2023/06/502.mp3",
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
        "name": {
          "items": [
            {
              "languageCode": "clc",
              "role": "original",
              "text": "You are not singing (lang)",
            },
            {
              "languageCode": "en",
              "role": "free translation",
              "text": "You are not singing (Engl)",
            },
          ],
        },
      },
      "variableValues": {
        "person": "02",
        "positive": false,
      },
    },
  ],
  "form": {
    "fields": [
      {
        "constraints": [],
        "description": "choose positive",
        "label": "positive",
        "name": "positive",
        "options": [
          {
            "display": "negative (lha)",
            "value": false,
          },
          {
            "display": "positive form (switch for negative)",
            "value": true,
          },
        ],
        "type": "SWITCH",
      },
      {
        "constraints": [],
        "description": "choose person",
        "label": "person",
        "name": "person",
        "options": [
          {
            "display": "I",
            "value": "1",
          },
          {
            "display": "You",
            "value": "2",
          },
          {
            "display": "She",
            "value": "3",
          },
        ],
        "type": "STATIC_SELECT",
      },
    ],
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "To Sing (lang)",
      },
      {
        "languageCode": "en",
        "role": "free translation",
        "text": "To Sing (Engl)",
      },
    ],
  },
  "tags": [],
}
`;
